2016-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Fix Coverity issue 126378
	"Resource leak".

	* coders/mat.c (DecompressBlock): Fix Coverity issue 126379
	"Resource leak".

	* magick/render.c (DrawImage): Fix Coverity issue 126380 "Resource
	leak".

2016-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Sanity check the image file
	path or URL before passing it to ReadImage().

	* config/delegates.mgk.in: Pare down delegates.mgk to reduce
	security exposure due to external programs not under our control.

2016-05-08  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Typo fix - matrix has nothing to do with PostScript.

2016-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (DecompressBlock): Don't hang on a corrupt deflate
	stream when reading matlab v6 file.  Fixes problem reported by
	Hanno Böck on May 8, 2016 via private email entitled "hang of
	matlab input file".

2016-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Undocumented "TMP" magick prefix
	no longer removes the argument file after it has been read. This
	functionality is only used to support the "show" delegate which is
	used by options in the 'display' program which need to display a
	generated image in a new instance of 'display'.  The "show"
	delegate is used by writing a temporary file to be viewed, and
	which should be removed before the program quits.  Since the "TMP"
	feature was originally implemented, GraphicsMagick added a
	temporary file management subsystem which assures that temporary
	files are removed so this feature is not needed.

	* coders/tiff.c (ReadTIFFImage): Fix heap overflow with file
	"gkkxrilssm.tiff.-4678010562506843336" provided by Gustavo Grieco
	on February 8, 2006 via private email.

	* coders/viff.c (ReadVIFFImage): Fix problem with a very large
	malloc in sample file provided by Hanno Böck on May 7, 2016 with