@@ -38,6 +38,11 @@
 <p>2016-05-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/msl.c (RegisterMSLImage): Ignore the file extension on
+MSL files.  The only way to read an image from a MSL file (as
+opposed to explicitly running a MSL script with 'conjure') is by
+reading using a filename specification like &quot;msl:filename&quot;.  This
+is done for security reasons.</li>
 <li>magick/render.c (DrawPrimitive): Fix Coverity issue 126378
 &quot;Resource leak&quot;.</li>
 <li>coders/mat.c (DecompressBlock): Fix Coverity issue 126379
